prototypes/v1/tests/elab/errors/fun_lit/unsolved_pat_type.snapshot
exit status: 1

stdout = """
def error: ?1 -> ?1 = fun(x: ?1) => x;
types of expressions:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
12..23 | fun(x) => x                              | ?1 -> ?1
22..23 | x                                        | ?1
types of patterns:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
16..17 | x                                        | ?1
metavars:
?0 = ?1 -> ?1
?1 = <unsolved>
"""

stderr = """
error: unable to infer pattern type
  ┌─ tests/elab/errors/fun_lit/unsolved_pat_type.pion:1:17
  │
1 │ def error = fun(x) => x;
  │                 ^

aborting due to 1 previous error
"""
